# ft-vac-control

./: .gitmodules  LICENSE  README.md
pcb/: VTX-214-005-005.kicad_sym  VacControl.kicad_pcb  VacControl.kicad_pro  VacControl.kicad_sch  fp-lib-table  sym-lib-table  wago-2604-1103.kicad_sym
pcb/VTX-214-005-0xx.pretty/: Converter_ACDC_Vigortronix_VTX-214-005-0xx_THT.kicad_mod
pcb/festool BT module.pretty/: BT receiver.kicad_mod
pcb/wago-2604-1103/: wago-2604-1103.lib
pcb/wago-2604-1103.pretty/: 2604-1103.kicad_mod  2604-1104.kicad_mod
pcb/wago-2604-1103/footprints.pretty/: 2604-1103.kicad_mod
software/: CMakeLists.txt  decoder.c  decoder.h  main.c  vaccontrol.code-workspace
software/traces/: Off.pvs  Off.sr  On.pvs  On.sr  README.md  Startup.pvs  Startup.sr  wavedrom.json
